Fixed layout issues

--- a/bmi-calculator/style.css
+++ b/bmi-calculator/style.css
@@ -318,7 +318,7 @@ input[type="radio"] {
     }
 }
 
-@media(min-width: 42em) and (max-width: 60em){
+@media(min-width: 42em) and (max-width: 60em) {
     .bmi__card::after {
         right: 0;
         transform: translate(30rem, 16rem);
@@ -537,8 +537,6 @@ input[type="radio"] {
 
 .row {
     display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
 }
 
 .container {
@@ -551,11 +549,24 @@ input[type="radio"] {
     .container {
         --default-padding: 2.5em;
     }
+
+    .row {
+        place-items: center;
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+    }
 }
 
 @media(min-width: 60em) {
     .container {
         --default-padding: 8.75em;
+    }
+
+    .row {
+        place-items: center;
+        gap: 1.5rem;
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
     }
 }
 
@@ -715,8 +726,8 @@ input[type="radio"] {
     background-color: var(--clr-neutral-200);
 }
 
-@media(max-width:60em){
-    .text-sm-center{
+@media(max-width:60em) {
+    .text-sm-center {
         text-align: center;
     }
 }
